benerin layout